welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:5: error: not found: type int
  var s3:int=a+c
         ^